# OVR-Shock

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg_deps.txt
cmake/: ConfigureQt.cmake  StandardProjectSettings.cmake
src/: vrwidget.cpp  vrwidget.h
src/vr/: conversion.h  debug.cpp  debug.h  helpers.h  math.cpp  math.h  overlay.cpp  overlay.h  overlay_scene.cpp  overlay_scene.h  scene-manager.cpp  scene-manager.h  system.h  system_core.cpp  system_input.cpp  tracked-device.cpp  tracked-device.h  tracked_device.cpp  tracked_device.h  tracking_reference.cpp  tracking_reference.h  transform.cpp  transform.h  vr_manager.cpp  vr_manager.h
